[gd_scene load_steps=15 format=3 uid="uid://67f7v5rgvbn6"]

[ext_resource type="Script" path="res://Game Level/character_select.gd" id="1_eo54c"]
[ext_resource type="Texture2D" uid="uid://b0lln4odh5qk5" path="res://Art/carbon.png" id="1_qitqq"]
[ext_resource type="Texture2D" uid="uid://lycsntnfgv1l" path="res://Game Level/Orange and Blue Doodle Science Project Presentation (1).png" id="2_gjuq1"]
[ext_resource type="Texture2D" uid="uid://b156ueupy57lq" path="res://Art/iron.png" id="2_ycv2h"]
[ext_resource type="Texture2D" uid="uid://bkn525isv8sui" path="res://Art/chlorine.png" id="3_6owel"]
[ext_resource type="Texture2D" uid="uid://b5dqgt77nosd8" path="res://Art/oxygen.png" id="3_ksk5s"]
[ext_resource type="Texture2D" uid="uid://cogrfgugedimg" path="res://Art/gold.png" id="4_ac63a"]
[ext_resource type="Texture2D" uid="uid://d17yyeclo555a" path="res://Art/helium.png" id="5_vmxpq"]
[ext_resource type="Texture2D" uid="uid://cd78usjf6by6y" path="res://Art/hydrogen.png" id="6_bdbkh"]
[ext_resource type="Texture2D" uid="uid://cprlhmwhdxu8e" path="res://Art/lithium.png" id="8_y81ej"]
[ext_resource type="Texture2D" uid="uid://dk5pym6o63pjs" path="res://Art/mercury.png" id="9_hn04i"]
[ext_resource type="Texture2D" uid="uid://dogne02lhjdbb" path="res://Art/silver.png" id="11_gvkps"]
[ext_resource type="Texture2D" uid="uid://dkkhlwtj2i338" path="res://Game Level/boron.png" id="13_8i5m5"]
[ext_resource type="Texture2D" uid="uid://co2m4hv5dnt3g" path="res://Game Level/sodium.png" id="14_fp1mn"]

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eo54c")

[node name="OrangeAndBlueDoodleScienceProjectPresentation(1)" type="Sprite2D" parent="."]
position = Vector2(582, 328)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_gjuq1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -90.0
offset_top = -73.0
offset_right = -43.0
offset_bottom = -23.0
scale = Vector2(28.7778, 16.0526)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 402.0
offset_top = 127.0
offset_right = 580.0
offset_bottom = 150.0
scale = Vector2(2, 2)
text = "Choose Your Character"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 294.0
offset_top = 467.0
offset_right = 351.0
offset_bottom = 490.0
text = "Carbon"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 247.0
offset_top = 211.0
offset_right = 507.0
offset_bottom = 295.0
scale = Vector2(2.58585, 2.58585)
columns = 6

[node name="Carbon" type="Button" parent="GridContainer" groups=["Characters"]]
layout_mode = 2
icon = ExtResource("1_qitqq")
metadata/_edit_group_ = true

[node name="Chlorine" type="Button" parent="GridContainer" groups=["Characters"]]
layout_mode = 2
icon = ExtResource("3_6owel")
metadata/_edit_group_ = true

[node name="Gold" type="Button" parent="GridContainer" groups=["Characters"]]
layout_mode = 2
icon = ExtResource("4_ac63a")
metadata/_edit_group_ = true

[node name="Helium" type="Button" parent="GridContainer" groups=["Characters"]]
layout_mode = 2
icon = ExtResource("5_vmxpq")
metadata/_edit_group_ = true

[node name="Hydrogen" type="Button" parent="GridContainer" groups=["Characters"]]
layout_mode = 2
icon = ExtResource("6_bdbkh")
metadata/_edit_group_ = true

[node name="Iron" type="Button" parent="GridContainer" groups=["Characters"]]
layout_mode = 2
icon = ExtResource("2_ycv2h")
metadata/_edit_group_ = true

[node name="Lithium" type="Button" parent="GridContainer" groups=["Characters"]]
layout_mode = 2
icon = ExtResource("8_y81ej")
metadata/_edit_group_ = true

[node name="Mercury" type="Button" parent="GridContainer" groups=["Characters"]]
layout_mode = 2
icon = ExtResource("9_hn04i")
metadata/_edit_group_ = true

[node name="Oxygen" type="Button" parent="GridContainer" groups=["Characters"]]
layout_mode = 2
icon = ExtResource("3_ksk5s")
metadata/_edit_group_ = true

[node name="Silver" type="Button" parent="GridContainer" groups=["Characters"]]
layout_mode = 2
icon = ExtResource("11_gvkps")
metadata/_edit_group_ = true

[node name="Hydrogen2" type="Button" parent="GridContainer" groups=["Characters"]]
layout_mode = 2
icon = ExtResource("13_8i5m5")
metadata/_edit_group_ = true

[node name="Hydrogen3" type="Button" parent="GridContainer" groups=["Characters"]]
layout_mode = 2
icon = ExtResource("14_fp1mn")
metadata/_edit_group_ = true

[node name="Select Button" type="Button" parent="."]
layout_mode = 0
offset_left = 755.0
offset_top = 477.0
offset_right = 823.0
offset_bottom = 508.0
scale = Vector2(1.5, 1.5)
text = "Select"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(582, 328)
zoom = Vector2(2, 2)

[connection signal="pressed" from="GridContainer/Carbon" to="." method="_on_coal_pressed"]
[connection signal="pressed" from="GridContainer/Chlorine" to="." method="_on_chlorine_pressed"]
[connection signal="pressed" from="GridContainer/Gold" to="." method="_on_gold_pressed"]
[connection signal="pressed" from="GridContainer/Helium" to="." method="_on_helium_pressed"]
[connection signal="pressed" from="GridContainer/Hydrogen" to="." method="_on_hydrogen_pressed"]
[connection signal="pressed" from="GridContainer/Iron" to="." method="_on_iron_pressed"]
[connection signal="pressed" from="GridContainer/Lithium" to="." method="_on_lithium_pressed"]
[connection signal="pressed" from="GridContainer/Mercury" to="." method="_on_mercury_pressed"]
[connection signal="pressed" from="GridContainer/Oxygen" to="." method="_on_oxygen_pressed"]
[connection signal="pressed" from="GridContainer/Silver" to="." method="_on_silver_pressed"]
[connection signal="pressed" from="GridContainer/Hydrogen2" to="." method="_on_hydrogen_pressed"]
[connection signal="pressed" from="GridContainer/Hydrogen3" to="." method="_on_hydrogen_pressed"]
[connection signal="pressed" from="Select Button" to="." method="_on_select_button_pressed"]
